--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -37,4 +37,12 @@ body {
       ),
       rgba(10, 12, 17, 0.1);
   }
+  .ticketBg {
+    background: radial-gradient(
+        57.42% 106.59% at 14.02% 32.06%,
+        rgba(36, 160, 181, 0.2) 0%,
+        rgba(36, 160, 181, 0) 100%
+      ),
+      rgba(10, 12, 17, 0.1);
+  }
 }
